--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,6 +66,7 @@ jobs:
           armv7-unknown-linux-gnueabihf,
           riscv64gc-unknown-linux-gnu, 
           s390x-unknown-linux-gnu,
+          thumbv7neon-unknown-linux-gnueabihf,
 #          mips64-unknown-linux-muslabi64,
 #          loongarch64-unknown-linux-gnu,
 
@@ -91,6 +92,8 @@ jobs:
           - target: riscv64gc-unknown-linux-gnu 
             os: ubuntu-latest
           - target: s390x-unknown-linux-gnu
+            os: ubuntu-latest
+          - target: thumbv7neon-unknown-linux-gnueabihf
             os: ubuntu-latest
 #          - target: mips64-unknown-linux-muslabi64
 #            os: ubuntu-latest
