--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,6 +72,8 @@ jobs:
           x86_64-apple-darwin,
           aarch64-apple-darwin,
 
+          aarch64-pc-windows-gnu,
+          aarch64-pc-windows-msvc,
           x86_64-pc-windows-gnu,
           x86_64-pc-windows-msvc,
           i686-pc-windows-gnu,
@@ -102,6 +104,10 @@ jobs:
           - target: aarch64-apple-darwin
             os: macos-14
 
+          - target: aarch64-pc-windows-msvc
+            os: windows-latest
+          - target: aarch64-pc-windows-gnu
+            os: windows-latest
           - target: x86_64-pc-windows-msvc
             os: windows-latest
           - target: x86_64-pc-windows-gnu
