--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,7 +72,7 @@ jobs:
           x86_64-apple-darwin,
           aarch64-apple-darwin,
 
-          aarch64-pc-windows-gnu,
+          aarch64-pc-windows-gnullvm,
           aarch64-pc-windows-msvc,
           x86_64-pc-windows-gnu,
           x86_64-pc-windows-msvc,
@@ -106,7 +106,7 @@ jobs:
 
           - target: aarch64-pc-windows-msvc
             os: windows-latest
-          - target: aarch64-pc-windows-gnu
+          - target: aarch64-pc-windows-gnullvm
             os: windows-latest
           - target: x86_64-pc-windows-msvc
             os: windows-latest
